String resources update

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,7 +29,7 @@
             android:id="@+id/textInputEditText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Wyszukaj słowo"
+            android:hint="@string/word_search_hint"
             android:imeOptions="actionSearch"
             android:inputType="text"
             android:paddingTop="16dp"
@@ -68,7 +68,7 @@
         android:layout_height="40dp"
         android:layout_marginBottom="16dp"
         android:background="@drawable/ic_puzzle_default"
-        android:contentDescription="Bricks"
+        android:contentDescription="Puzzle"
         app:layout_constraintBottom_toTopOf="@+id/backspaceButton"
         app:layout_constraintEnd_toStartOf="@+id/learn_btn"
         app:layout_constraintHorizontal_bias="0.5"
