--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -145,11 +145,10 @@
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_marginEnd="8dp"
-            android:layout_marginBottom="8dp"
             android:background="@drawable/done_btn_selector"
             android:contentDescription="Camera"
             android:visibility="invisible"
-            app:layout_constraintBottom_toBottomOf="@+id/character_draw_canvas"
+            app:layout_constraintBottom_toBottomOf="@+id/characters_rv"
             app:layout_constraintEnd_toEndOf="parent" />
 
         <com.wegielek.signalychinese.views.CanvasView
@@ -159,23 +158,22 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
-            android:layout_marginBottom="16dp"
-            app:layout_constraintBottom_toTopOf="@+id/puzzle_btn"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toTopOf="@+id/characters_rv"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/settings_btn"
-            app:layout_constraintVertical_bias="0.0" />
+            app:layout_constraintTop_toBottomOf="@+id/settings_btn" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/characters_rv"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
+            android:layout_marginStart="16dp"
             android:layout_marginEnd="8dp"
-            android:layout_marginBottom="8dp"
+            android:layout_marginBottom="16dp"
             android:layout_weight="1"
-            app:layout_constraintBottom_toBottomOf="@+id/character_draw_canvas"
+            app:layout_constraintBottom_toTopOf="@+id/draw_btn"
             app:layout_constraintEnd_toStartOf="@+id/done_btn"
             app:layout_constraintStart_toStartOf="parent" />
 
